--- a/src/resources/messages.properties
+++ b/src/resources/messages.properties
@@ -4,3 +4,5 @@
 message.loginerror = Incorrect login or password.
 message.nullpage = Page not found. Business logic error.
 message.wrongaction = : command not found or wrong!
+
+message.emptyfielderror = At least one field is empty.
