--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -1,10 +1,15 @@
 login.label.login=Login (e-mail)
-login.label.username = Username
+login.label.firstname = First name
+login.label.secondname = Second name
 login.label.password = Password
-login.label.repeatpassword = Repeat password
-login.label.gotoindex = Back to top
-login.button.submit = Sign in
-login.button.newuser = New user?
 login.lang.select=Select language
 
+login.button.newuser = New user?
+login.button.submit = Sign in
+login.button.tologin = Login page
+
+login.message.loginerror = Incorrect login or password.
+
+login.label.gotoindex = Back to top
+login.label.repeatpassword = Repeat password
 crew.new = Forming the team
