--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -1,9 +1,15 @@
 login.label.login = \u041b\u043e\u0433\u0438\u043d (\u0430\u0434\u0440\u0435\u0441 \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u043e\u0439 \u043f\u043e\u0447\u0442\u044b e-mail)
-login.label.username = \u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
+login.label.firstname = \u0418\u043c\u044f
+login.label.secondname = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
 login.label.password = \u041f\u0430\u0440\u043e\u043b\u044c
-login.label.repeatpassword =  \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043d\u043e\u0432\u044b\u0439 \u043f\u0430\u0440\u043e\u043b\u044c \u0435\u0449\u0435 \u0440\u0430\u0437
-login.label.gotoindex =
-login.button.submit = \u0412\u043e\u0439\u0442\u0438
-login.button.newuser = 
-
 login.lang.select=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044f\u0437\u044b\u043a
+
+
+login.button.newuser = \u041d\u043e\u0432\u044b\u0439 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c?
+login.button.submit = \u0412\u043e\u0439\u0442\u0438
+login.button.tologin = \u041d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443 \u0432\u0445\u043e\u0434\u0430
+
+login.message.loginerror = \u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 \u043b\u043e\u0433\u0438\u043d \u0438\u043b\u0438 \u043f\u0430\u0440\u043e\u043b\u044c
+
+login.label.gotoindex =
+login.label.repeatpassword =  \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043d\u043e\u0432\u044b\u0439 \u043f\u0430\u0440\u043e\u043b\u044c \u0435\u0449\u0435 \u0440\u0430\u0437
