--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -8,8 +8,16 @@ login.button.newuser = New user?
 login.button.submit = Sign in
 login.button.tologin = Login page
 
-login.message.loginerror = Incorrect login or password.
 
 login.label.gotoindex = Back to top
 login.label.repeatpassword = Repeat password
 crew.new = Forming the team
+
+registration.label.emptyfielderror = At least one field is empty.
+
+
+login.message.loginerror = Incorrect login or password.
+login.label.wrongaction = : command not found or wrong!
+login.label.nullpage = Page not found. Business logic error.
+
+root.button.edit = Edit 
