--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -2,18 +2,19 @@ login.label.login=Login (e-mail)
 login.label.firstname = First name
 login.label.secondname = Second name
 login.label.password = Password
-login.lang.select=Select language
-
+login.label.role=Role
 login.button.newuser = New user?
 login.button.submit = Sign in
 login.button.tologin = Login page
 
+login.lang.select=Select language
 
 login.label.gotoindex = Back to top
 login.label.repeatpassword = Repeat password
 crew.new = Forming the team
 
 registration.label.emptyfielderror = At least one field is empty.
+edit.label.nonnumbererror=Field "Role" must be number from 1 to 3
 
 
 login.message.loginerror = Incorrect login or password.
