--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -2,8 +2,10 @@ login.label.login = \u041b\u043e\u0433\u0438\u043d (\u0430\u0434\u0440\u0435\u04
 login.label.firstname = \u0418\u043c\u044f
 login.label.secondname = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
 login.label.password = \u041f\u0430\u0440\u043e\u043b\u044c
-login.lang.select=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044f\u0437\u044b\u043a
+login.label.role=Role
 
+
+login.lang.select=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044f\u0437\u044b\u043a
 
 login.button.newuser = \u041d\u043e\u0432\u044b\u0439 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c?
 login.button.submit = \u0412\u043e\u0439\u0442\u0438
@@ -15,6 +17,8 @@ login.label.gotoindex =
 login.label.repeatpassword =  \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043d\u043e\u0432\u044b\u0439 \u043f\u0430\u0440\u043e\u043b\u044c \u0435\u0449\u0435 \u0440\u0430\u0437
 
 registration.label.emptyfielderror = \u041e\u0434\u043d\u043e, \u0438\u043b\u0438 \u0431\u043e\u043b\u0435\u0435 \u043f\u043e\u043b\u0435\u0439 \u043d\u0435 \u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u044b.
+edit.label.nonnumbererror=Field "Role" must be number from 1 to 3
+
 login.label.wrongaction = \u041a\u043e\u043c\u0430\u043d\u0434\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430.
 login.label.nullpage = \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430. \u041e\u0448\u0438\u0431\u043a\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u043b\u043e\u0433\u0438\u043a\u0438.
 
