--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -3,6 +3,8 @@ login.label.firstname = First name
 login.label.secondname = Second name
 login.label.password = Password
 login.label.role=Role
+login.label.logout=Logout
+
 login.button.newuser = New user?
 login.button.submit = Sign in
 login.button.tologin = Login page
@@ -15,10 +17,16 @@ crew.new = Forming the team
 
 registration.label.emptyfielderror = At least one field is empty.
 edit.label.nonnumbererror=Field "Role" must be number from 1 to 3
-
+edit.label.successfullyEditedUser = Person's data successfully edited.
+edit.label.shooseAction=Please, choose your action
+edit.label.showAllPersons=Show all persons, registred in the system
+edit.label.root=Root
+edit.label.tutor=Tutor
+edit.label.student=Student
 
 login.message.loginerror = Incorrect login or password.
 login.label.wrongaction = : command not found or wrong!
 login.label.nullpage = Page not found. Business logic error.
 
 root.button.edit = Edit 
+
