--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -18,7 +18,7 @@ login.label.repeatpassword =  \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043d\
 
 registration.label.emptyfielderror = \u041e\u0434\u043d\u043e, \u0438\u043b\u0438 \u0431\u043e\u043b\u0435\u0435 \u043f\u043e\u043b\u0435\u0439 \u043d\u0435 \u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u044b.
 edit.label.nonnumbererror=Field "Role" must be number from 1 to 3
-edit.label.successfullyEditedUser = Person's data successfully edited.
+edit.label.successfullyPerformedAction = The action was performed successfully
 edit.label.shooseAction=Please, choose your action
 edit.label.showAllPersons=Show all persons, registred in the system
 
@@ -30,3 +30,4 @@ login.label.wrongaction = \u041a\u043e\u043c\u0430\u043d\u0434\u0430 \u043d\u043
 login.label.nullpage = \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430. \u041e\u0448\u0438\u0431\u043a\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u043b\u043e\u0433\u0438\u043a\u0438.
 
 root.button.edit = Edit 
+root.button.delete=Delete
