home after DaoTest started. 2 method done

--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -24,6 +24,8 @@ edit.label.root=Root
 edit.label.tutor=Tutor
 edit.label.student=Student
 
+test.label.showAllTests = Show all tests
+
 
 login.message.loginerror = Incorrect login or password.
 login.label.wrongaction = : command not found or wrong!
