--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -24,12 +24,22 @@ edit.label.root=Root
 edit.label.tutor=Tutor
 edit.label.student=Student
 
+edit.label.test.title = Title
+edit.labelt.test.description = Description
+
+edit.button.save = Save changes
+
+
 test.label.showAllTests = Show all tests
+test.label.addTest = Add new test
+test.label.showAllQuestions = Show and edit all questions for this test
 
 
-login.message.loginerror = Incorrect login or password.
-login.label.wrongaction = : command not found or wrong!
-login.label.nullpage = Page not found. Business logic error.
+message.loginerror = Incorrect login or password.
+message.nullpage = Page not found. Business logic error.
+message.wrongaction = : command not found or wrong!
+
+
 
 root.button.edit = Edit 
 root.button.delete=Delete
