--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -23,9 +23,12 @@ edit.label.showAllPersons=Show all persons, registred in the system
 edit.label.root=Root
 edit.label.tutor=Tutor
 edit.label.student=Student
+edit.label.true = True
+edit.label.false = False
 
 edit.label.test.title = Title
 edit.labelt.test.description = Description
+edit.label.editing.question = Current question for editing
 
 edit.button.save = Save changes
 
@@ -33,6 +36,9 @@ edit.button.save = Save changes
 test.label.showAllTests = Show all tests
 test.label.addTest = Add new test
 test.label.showAllQuestions = Show and edit all questions for this test
+
+test.label.addQuestion = Add new question
+test.label.addAnswer = Add new answer
 
 
 message.loginerror = Incorrect login or password.
