--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -24,14 +24,20 @@ edit.label.showAllPersons=Show all persons, registred in the system
 edit.label.root=Root
 edit.label.tutor=Tutor
 edit.label.student=Student
+edit.label.true = True
+edit.label.false = False
 
 edit.label.test.title = Title
 edit.labelt.test.description = Description
 edit.button.save = Save changes
+edit.label.editing.question = Current question for editing
 
 test.label.showAllTests = Show all tests
 test.label.addTest = Add new test
 test.label.showAllQuestions = Show and edit all questions for this test
+
+test.label.addQuestion = Add new question
+test.label.addAnswer = Add new answer
 
 message.loginerror = \u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 \u043b\u043e\u0433\u0438\u043d \u0438\u043b\u0438 \u043f\u0430\u0440\u043e\u043b\u044c
 message.wrongaction = \u041a\u043e\u043c\u0430\u043d\u0434\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430.
