--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -31,7 +31,8 @@ edit.labelt.test.description = Description
 edit.label.editing.question = Current question for editing
 
 edit.button.save = Save changes
-
+edit.button.select = select
+edit.button.add = Add
 
 test.label.showAllTests = Show all tests
 test.label.addTest = Add new test
