--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -30,6 +30,10 @@ edit.label.false = False
 edit.label.test.title = Title
 edit.labelt.test.description = Description
 edit.button.save = Save changes
+edit.button.select = select
+edit.button.add = Add
+
+
 edit.label.editing.question = Current question for editing
 
 test.label.showAllTests = Show all tests
