home deleteTest added

--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -40,6 +40,8 @@ test.label.showAllQuestions = Show and edit all questions for this test
 
 test.label.addQuestion = Add new question
 test.label.addAnswer = Add new answer
+test.label.addTestTitle = Add title for the new test
+test.label.addTestDescription = Add description for the new test
 
 
 message.loginerror = Incorrect login or password.
