home student page

--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -52,4 +52,4 @@ message.wrongaction = : command not found or wrong!
 
 root.button.edit = Edit 
 root.button.delete=Delete
-
+root.button.perform=Perform test
