--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -51,3 +51,4 @@ message.nullpage = \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043d\u0435
 
 root.button.edit = Edit 
 root.button.delete=Delete
+root.button.perform=Perform test
