home result page

--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -39,6 +39,7 @@ edit.label.editing.question = Current question for editing
 test.label.showAllTests = Show all tests
 test.label.addTest = Add new test
 test.label.showAllQuestions = Show and edit all questions for this test
+test.label.showResult= Show result for performed tests
 
 test.label.addQuestion = Add new question
 test.label.addAnswer = Add new answer
