home TMP after getParameterValues

--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -45,6 +45,8 @@ test.label.addQuestion = Add new question
 test.label.addAnswer = Add new answer
 test.label.addTestTitle = Add title for the new test
 test.label.addTestDescription = Add description for the new test
+test.label.answering.question = Current question for answer
+
 
 message.loginerror = \u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 \u043b\u043e\u0433\u0438\u043d \u0438\u043b\u0438 \u043f\u0430\u0440\u043e\u043b\u044c
 message.wrongaction = \u041a\u043e\u043c\u0430\u043d\u0434\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430.
