--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -30,6 +30,7 @@ edit.label.test.title = Title
 edit.labelt.test.description = Description
 edit.label.editing.question = Current question for editing
 
+
 edit.button.save = Save changes
 edit.button.select = select
 edit.button.add = Add
@@ -43,6 +44,7 @@ test.label.addQuestion = Add new question
 test.label.addAnswer = Add new answer
 test.label.addTestTitle = Add title for the new test
 test.label.addTestDescription = Add description for the new test
+test.label.answering.question = Current question for answer
 
 
 message.loginerror = Incorrect login or password.
