--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -39,6 +39,7 @@ test.label.showAllTests = Show all tests
 test.label.addTest = Add new test
 test.label.showAllQuestions = Show and edit all questions for this test
 test.label.showResult= Show result for performed tests
+test.label.writeResult= Write result to database
 
 test.label.addQuestion = Add new question
 test.label.addAnswer = Add new answer
