--- a/src/resources/messages_bundle_ru.properties
+++ b/src/resources/messages_bundle_ru.properties
@@ -40,6 +40,8 @@ test.label.showAllTests = Show all tests
 test.label.addTest = Add new test
 test.label.showAllQuestions = Show and edit all questions for this test
 test.label.showResult= Show result for performed tests
+test.label.writeResult= Write result to database
+
 
 test.label.addQuestion = Add new question
 test.label.addAnswer = Add new answer
