home Good after showResultS

--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -16,6 +16,7 @@ login.label.repeatpassword = Repeat password
 crew.new = Forming the team
 
 registration.label.emptyfielderror = At least one field is empty.
+registration.label.duplicateEntryError = Login already exist
 edit.label.nonnumbererror=Field "Role" must be number from 1 to 3
 edit.label.successfullyPerformedAction = The action was performed successfully
 edit.label.shooseAction=Please, choose your action
@@ -51,9 +52,11 @@ test.label.answering.question = Current question for answer
 message.loginerror = Incorrect login or password.
 message.nullpage = Page not found. Business logic error.
 message.wrongaction = : command not found or wrong!
+message.errorEmptyResultTableMessage = There are no results for this person
 
 
 
 root.button.edit = Edit 
 root.button.delete=Delete
 root.button.perform=Perform test
+root.button.show.results=Show results
