home after internationalization

--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -2,8 +2,20 @@ login.label.login=Login (e-mail)
 login.label.firstname = First name
 login.label.secondname = Second name
 login.label.password = Password
+login.label.command= Command
 login.label.role=Role
 login.label.logout=Logout
+label.studentName= Student name
+label.nmbrOfPerformedTests= Number of performed tests
+label.nmbrOfTests= Number of tests
+label.mark= Mark
+label.notPerformedYet = not performed yet
+label.QuantityOfQuestions.Total = Quantity of questions(total in test)
+label.QuantityOfQuestions.Remain = Quantity of questions(remain)
+label.vatiantOfAnswer = Variant of answer
+label.correct = Correct
+label.TestCompleted = Test completed
+label.Questions = Questions
 
 login.button.newuser = New user?
 login.button.submit = Sign in
@@ -13,7 +25,7 @@ login.lang.select=Select language
 
 login.label.gotoindex = Back to top
 login.label.repeatpassword = Repeat password
-crew.new = Forming the team
+
 
 registration.label.emptyfielderror = At least one field is empty.
 registration.label.duplicateEntryError = Login already exist
