--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -17,6 +17,7 @@ label.correct = Correct
 label.TestCompleted = Test completed
 label.Questions = Questions
 
+
 login.button.newuser = New user?
 login.button.submit = Sign in
 login.button.tologin = Login page
@@ -72,3 +73,6 @@ root.button.edit = Edit
 root.button.delete=Delete
 root.button.perform=Perform test
 root.button.show.results=Show results
+root.button.nextQuestion = Next question
+
+
