--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -75,4 +75,24 @@ root.button.perform=Perform test
 root.button.show.results=Show results
 root.button.nextQuestion = Next question
 
+page.title.login= Login page
+page.title.registration= Registration page
+page.title.edit_question=Edit question page
+page.title.edit_questions=Edit questions page
+page.title.edit_test=Edit test page
+page.title.main_tutor=Main tutor page
+page.title.main_student=Main student page
+page.title.perform_test=Perform test page
+page.title.show_result=Show result page
+page.title.edit_user=Edit user page
+page.title.main_root=Main root page
+page.title.show_results=Show results page
+page.title.error = Error page
+
+page.error.content.request_from = Request from 
+page.error.content.is_failed =  is failed
+page.error.content.servlet_name_or_type=  Servlet name or type
+page.error.content.status_code=  Status code
+page.error.content.exception=  Exception
+
 
