--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -1,98 +1,97 @@
-login.label.login=Login (e-mail)
-login.label.firstname = First name
-login.label.secondname = Second name
-login.label.password = Password
-login.label.command= Command
-login.label.role=Role
-login.label.logout=Logout
-label.studentName= Student name
-label.nmbrOfPerformedTests= Number of performed tests
-label.nmbrOfTests= Number of tests
-label.mark= Mark
-label.notPerformedYet = not performed yet
-label.QuantityOfQuestions.Total = Quantity of questions(total in test)
-label.QuantityOfQuestions.Remain = Quantity of questions(remain)
-label.vatiantOfAnswer = Variant of answer
-label.correct = Correct
-label.TestCompleted = Test completed
-label.Questions = Questions
+login.label.login = \u041b\u043e\u0433\u0438\u043d (\u0430\u0434\u0440\u0435\u0441 \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u043e\u0439 \u043f\u043e\u0447\u0442\u044b e-mail)
+login.label.firstname = \u0418\u043c\u044f
+login.label.secondname = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
+login.label.password = \u041f\u0430\u0440\u043e\u043b\u044c
+login.label.command = \u041a\u043e\u043c\u0430\u043d\u0434\u0430
+login.label.role=\u0420\u043e\u043b\u044c
+login.label.logout=\u0412\u044b\u0439\u0442\u0438 \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
+label.studentName= \u0418\u043c\u044f \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
+label.nmbrOfPerformedTests= \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u043d\u044b\u0445 \u0442\u0435\u0441\u0442\u043e\u0432
+label.nmbrOfTests= \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0442\u0435\u0441\u0442\u043e\u0432 
+label.mark= \u041e\u0446\u0435\u043d\u043a\u0430
+label.notPerformedYet =  \u043d\u0435 \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d
+label.QuantityOfQuestions.Total = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0432\u043e\u043f\u0440\u043e\u0441\u043e\u0432 (\u0432\u0441\u0435\u0433\u043e \u0432 \u0442\u0435\u0441\u0442\u0435)
+label.QuantityOfQuestions.Remain = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0432\u043e\u043f\u0440\u043e\u0441\u043e\u0432 (\u043e\u0441\u0442\u0430\u043b\u043e\u0441\u044c)
+label.vatiantOfAnswer = \u0412\u0430\u0440\u0438\u0430\u043d\u0442 \u043e\u0442\u0432\u0435\u0442\u0430
+label.correct = \u041a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e\u0441\u0442\u044c
+label.TestCompleted = \u0422\u0435\u0441\u0442 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d
+label.Questions = \u0412\u043e\u043f\u0440\u043e\u0441\u044b
+ 
+login.lang.select=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044f\u0437\u044b\u043a
 
-
-login.button.newuser = New user?
-login.button.submit = Sign in
-login.button.tologin = Login page
-
-login.lang.select=Select language
-
-login.label.gotoindex = Back to top
-login.label.repeatpassword = Repeat password
-
-
-registration.label.emptyfielderror = At least one field is empty.
-registration.label.duplicateEntryError = Login already exist
-edit.label.nonnumbererror=Field "Role" must be number from 1 to 3
-edit.label.successfullyPerformedAction = The action was performed successfully
-edit.label.shooseAction=Please, choose your action
-edit.label.showAllPersons=Show all persons, registred in the system
-edit.label.root=Root
-edit.label.tutor=Tutor
-edit.label.student=Student
-edit.label.true = True
-edit.label.false = False
-
-edit.label.test.title = Title
-edit.labelt.test.description = Description
-edit.label.editing.question = Current question for editing
-
-
-edit.button.save = Save changes
-edit.button.select = select
-edit.button.add = Add
-
-test.label.showAllTests = Show all tests
-test.label.addTest = Add new test
-test.label.showAllQuestions = Show and edit all questions for this test
-test.label.showResult= Show result for performed tests
-test.label.writeResult= Write result to database
-
-test.label.addQuestion = Add new question
-test.label.addAnswer = Add new answer
-test.label.addTestTitle = Add title for the new test
-test.label.addTestDescription = Add description for the new test
-test.label.answering.question = Current question for answer
-
-
-message.loginerror = Incorrect login or password.
-message.nullpage = Page not found. Business logic error.
-message.wrongaction = : command not found or wrong!
-message.errorEmptyResultTableMessage = There are no results for this person
+login.button.newuser = \u041d\u043e\u0432\u044b\u0439 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c?
+login.button.submit = \u0412\u043e\u0439\u0442\u0438
+login.button.tologin = \u041d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443 \u0432\u0445\u043e\u0434\u0430
 
 
 
-root.button.edit = Edit 
-root.button.delete=Delete
-root.button.perform=Perform test
-root.button.show.results=Show results
-root.button.nextQuestion = Next question
+login.label.repeatpassword =  \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043d\u043e\u0432\u044b\u0439 \u043f\u0430\u0440\u043e\u043b\u044c \u0435\u0449\u0435 \u0440\u0430\u0437
 
-page.title.login= Login page
-page.title.registration= Registration page
-page.title.edit_question=Edit question page
-page.title.edit_questions=Edit questions page
-page.title.edit_test=Edit test page
-page.title.main_tutor=Main tutor page
-page.title.main_student=Main student page
-page.title.perform_test=Perform test page
-page.title.show_result=Show result page
-page.title.edit_user=Edit user page
-page.title.main_root=Main root page
-page.title.show_results=Show results page
-page.title.error = Error page
+registration.label.emptyfielderror = \u041e\u0434\u043d\u043e, \u0438\u043b\u0438 \u0431\u043e\u043b\u0435\u0435 \u043f\u043e\u043b\u0435\u0439 \u043d\u0435 \u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u044b.
+registration.label.duplicateEntryError = \u0422\u0430\u043a\u043e\u0439 \u043b\u043e\u0433\u0438\u043d \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442
+edit.label.nonnumbererror=\u041f\u043e\u043b\u0435 "\u0420\u043e\u043b\u044c" \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0447\u0438\u0441\u043b\u043e\u043c \u043e\u0442 1 \u0434\u043e 3 
+edit.label.successfullyPerformedAction = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435 \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u043d\u043e \u0443\u0441\u043f\u0435\u0448\u043d\u043e 
+edit.label.shooseAction=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430, \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0432\u0430\u0448\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435 
+edit.label.showAllPersons= \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0432\u0441\u0435\u0445 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439, \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0445 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0435 
 
-page.error.content.request_from = Request from 
-page.error.content.is_failed =  is failed
-page.error.content.servlet_name_or_type=  Servlet name or type
-page.error.content.status_code=  Status code
-page.error.content.exception=  Exception
+edit.label.root=\u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440
+edit.label.tutor=\u041f\u0440\u0435\u043f\u043e\u0434\u0430\u0432\u0430\u0442\u0435\u043b\u044c
+edit.label.student=\u0421\u0442\u0443\u0434\u0435\u043d\u0442
+edit.label.true = \u041f\u0440\u0430\u0432\u0434\u0430
+edit.label.false = \u041b\u043e\u0436\u044c
+
+edit.label.test.title = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
+edit.labelt.test.description = \u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
+edit.button.save = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f
+edit.button.select = \u0412\u044b\u0431\u043e\u0440
+edit.button.add = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
+
+
+edit.label.editing.question = \u0422\u0435\u043a\u0443\u0449\u0438\u0439 \u0432\u043e\u043f\u0440\u043e\u0441 \u0434\u043b\u044f \u0440\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f 
+test.label.showAllTests = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0432\u0441\u0435 \u0442\u0435\u0441\u0442\u044b 
+test.label.addTest = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u043e\u0432\u044b\u0439 \u0442\u0435\u0441\u0442 
+
+test.label.showAllQuestions = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0438 \u0440\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432\u0441\u0435 \u0432\u043e\u043f\u0440\u043e\u0441\u044b \u0434\u043b\u044f \u044d\u0442\u043e\u0433\u043e \u0442\u0435\u0441\u0442\u0430 
+test.label.showResult= \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442\u044b \u0434\u043b\u044f \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u043d\u044b\u0445 \u0442\u0435\u0441\u0442\u043e\u0432 
+test.label.writeResult= \u0417\u0430\u043f\u0438\u0441\u0430\u0442\u044c \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \u0432 \u0431\u0430\u0437\u0443 \u0434\u0430\u043d\u043d\u044b\u0445 
+
+
+test.label.addQuestion = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u043e\u0432\u044b\u0439 \u0432\u043e\u043f\u0440\u043e\u0441 
+test.label.addAnswer = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u043e\u0432\u044b\u0439 \u043e\u0442\u0432\u0435\u0442 
+test.label.addTestTitle = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0434\u043b\u044f \u043d\u043e\u0432\u043e\u0433\u043e \u0442\u0435\u0441\u0442\u0430 
+test.label.addTestDescription = \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0434\u043b\u044f \u043d\u043e\u0432\u043e\u0433\u043e \u0442\u0435\u0441\u0442\u0430 
+test.label.answering.question = \u0422\u0435\u043a\u0443\u0449\u0438\u0439 \u0432\u043e\u043f\u0440\u043e\u0441 \u0434\u043b\u044f \u043e\u0442\u0432\u0435\u0442\u0430 
+
+
+message.loginerror = \u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 \u043b\u043e\u0433\u0438\u043d \u0438\u043b\u0438 \u043f\u0430\u0440\u043e\u043b\u044c
+message.wrongaction = \u041a\u043e\u043c\u0430\u043d\u0434\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430.
+message.nullpage = \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u0430. \u041e\u0448\u0438\u0431\u043a\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u043b\u043e\u0433\u0438\u043a\u0438.
+message.errorEmptyResultTableMessage = \u0414\u043b\u044f \u044d\u0442\u043e\u0433\u043e \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f \u043d\u0435\u0442 \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442\u043e\u0432 
+
+root.button.edit = \u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+root.button.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
+root.button.perform=\u0412\u044b\u043f\u043e\u043b\u043d\u0438\u0442\u044c \u0442\u0435\u0441\u0442
+root.button.show.results=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442\u044b
+root.button.nextQuestion = \u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0439 \u0432\u043e\u043f\u0440\u043e\u0441
+
+page.title.login= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043b\u043e\u0433\u0438\u043d
+page.title.registration= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
+page.title.edit_question= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0440\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0432\u043e\u043f\u0440\u043e\u0441\u0430
+page.title.edit_questions= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0440\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0432\u043e\u043f\u0440\u043e\u0441\u043e\u0432
+page.title.edit_test= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0440\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0442\u0435\u0441\u0442\u0430
+page.title.main_tutor= \u0413\u043b\u0430\u0432\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043f\u0440\u0435\u043f\u043e\u0434\u0430\u0432\u0430\u0442\u0435\u043b\u044f
+page.title.main_student= \u0413\u043b\u0430\u0432\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0441\u0442\u0443\u0434\u0435\u043d\u0442\u0430
+page.title.perform_test= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u0435 \u0442\u0435\u0441\u0442\u0430
+page.title.show_result= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043f\u043e\u043a\u0430\u0437 \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442\u0430
+page.title.edit_user= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0440\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
+page.title.main_root= \u0413\u043b\u0430\u0432\u043d\u0430\u044f \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u0430
+page.title.show_results= \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043f\u043e\u043a\u0430\u0437 \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442\u043e\u0432
+page.title.error = \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430 \u043e\u0448\u0438\u0431\u043a\u0438
+
+page.error.content.request_from =  \u0417\u0430\u043f\u0440\u043e\u0441 \u043e\u0442
+page.error.content.is_failed =  \u043d\u0435 \u0443\u0434\u0430\u043b\u0441\u044f
+page.error.content.servlet_name_or_type= \u0418\u043c\u044f \u0438\u043b\u0438 \u0442\u0438\u043f \u0441\u0435\u0440\u0432\u043b\u0435\u0442\u0430
+page.error.content.status_code= \u041a\u043e\u0434 \u0441\u0442\u0430\u0442\u0443\u0441\u0430
+page.error.content.exception= \u0418\u0441\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u0435
 
 
