--- a/src/resources/messages_bundle_en.properties
+++ b/src/resources/messages_bundle_en.properties
@@ -1,4 +1,4 @@
-login.label.login=Login (e-mail)
+login.label.login=Login
 login.label.firstname = First name
 login.label.secondname = Second name
 login.label.password = Password
