--- a/src/resources/messages_bundle.properties
+++ b/src/resources/messages_bundle.properties
@@ -1,4 +1,4 @@
-login.label.login = \u041b\u043e\u0433\u0438\u043d (\u0430\u0434\u0440\u0435\u0441 \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u043e\u0439 \u043f\u043e\u0447\u0442\u044b e-mail)
+login.label.login=\u041b\u043e\u0433\u0438\u043d
 login.label.firstname = \u0418\u043c\u044f
 login.label.secondname = \u0424\u0430\u043c\u0438\u043b\u0438\u044f
 login.label.password = \u041f\u0430\u0440\u043e\u043b\u044c
