home after check test for performed at least one time

--- a/src/resources/messages_bundle_en.properties
+++ b/src/resources/messages_bundle_en.properties
@@ -88,6 +88,7 @@ page.title.edit_user=Edit user page
 page.title.main_root=Main root page
 page.title.show_results=Show results page
 page.title.error = Error page
+page.title.cant_edit_test = You can not edit this test, because it was already performed at least one time.
 
 page.error.content.request_from = Request from 
 page.error.content.is_failed =  is failed
